# LegenDAO_Rework

./: .gitignore  Datadump.md  Makefile  legend.drawio  package.json  polar.config.js
contracts/airdrop/: Cargo.toml
contracts/airdrop/examples/: schema.rs
contracts/airdrop/schema/: airdrop_claim_response.json  handle_msg.json  init_msg.json  query_msg.json
contracts/airdrop/src/: init.rs  lib.rs  state.rs
contracts/airdrop/src/handles/: change_config.rs  confirm_airdrop.rs  mod.rs  set_airdrop_vk.rs  set_quest_password.rs
contracts/airdrop/src/queries/: airdrop_claims.rs  get_account_info.rs  mod.rs
contracts/airdrop/src/types/: airdrop.rs  deposit.rs  mod.rs
contracts/nft-minting/: Cargo.toml
contracts/nft-minting/examples/: schema.rs
contracts/nft-minting/src/: contract.rs  lib.rs  msg.rs  state.rs
contracts/nft-minting/src/handles/: add_whitelist.rs  change_settings.rs  mint.rs  (+8 more)
contracts/platform/: Cargo.toml  Makefile
contracts/platform/examples/: schema.rs
contracts/platform/schema/: handle_answer.json  handle_msg.json  init_msg.json  platform_api.json  query_answer.json  query_msg.json  query_with_permit.json  receive_msg.json
contracts/platform/src/: auto_claim.rs  constants.rs  contract.rs  ethereum.rs  lib.rs  msg.rs  state.rs  unittests.rs  unittests_utils.rs
contracts/platform/src/msgs/: mod.rs  nft_info.rs  transfer_nft.rs  update_nft.rs
contracts/platform/src/snip721/: extension.rs  mod.rs  snip721_handle_msg.rs  snip721_trait.rs
contracts/quest-tracker/: Cargo.toml
contracts/quest-tracker/examples/: schema.rs
contracts/quest-tracker/schema/: handle_msg.json  init_msg.json  query_msg.json
contracts/quest-tracker/src/: init.rs  lib.rs  state.rs
contracts/snip20/: Cargo.toml  Makefile
contracts/snip20/examples/: schema.rs
contracts/snip20/schema/: handle_answer.json  handle_msg.json  init_msg.json  query_answer.json
contracts/snip20/src/: contract.rs
contracts/snip721/: Cargo.toml  Makefile
contracts/snip721-lockable/: Cargo.toml
contracts/snip721-lockable/examples/: schema.rs
contracts/snip721-lockable/schema/: handle_answer.json  handle_msg.json  query_answer.json  query_msg.json
contracts/snip721-lockable/src/: contract.rs  lib.rs  msg.rs  state.rs  subscriber_msg.rs  token.rs  unittest_handles.rs  unittest_queries.rs  unittest_royalties.rs
contracts/snip721/examples/: schema.rs
contracts/snip721/schema/: handle_answer.json  handle_msg.json  query_answer.json  query_msg.json
contracts/snip721/src/: contract.rs  msg.rs  state.rs  unittest_handles.rs  unittest_mint_run.rs  unittest_queries.rs  unittest_royalties.rs  viewing_key.rs
contracts/staking/: Cargo.toml  Makefile
contracts/staking/examples/: schema.rs
contracts/staking/schema/: handle_answer.json  handle_msg.json  init_msg.json  query_answer.json  query_msg.json  query_with_permit.json  receive_msg.json
contracts/staking/src/: constants.rs  contract.rs  lib.rs  msg.rs  staking_unittests.rs  state.rs  unittest_utils.rs
contracts/vesting/: Cargo.toml  Makefile
contracts/vesting/examples/: schema.rs
contracts/vesting/schema/: handle_msg.json  handle_resp.json  init_msg.json  query_msg.json  query_resp.json
contracts/vesting/src/: config.rs  contract.rs  handle.rs  init.rs  lib.rs  query.rs  types.rs  vesting.rs
deploy/: deploy_LGND.js  deploy_nft.js  deploy_platform.js  mnemonicsGenerator.js  set_whitelist.js
deploy/exmaples/: nft_price.json
deploy/ks/: nft_price.json  royalty_info.json
deploy/ks/metadata_test/: 1.json  10.json  100.json  101.json  102.json  103.json  104.json  105.json  106.json  107.json  108.json  109.json  11.json  110.json  111.json  112.json  113.json  114.json  115.json  116.json  117.json  118.json  119.json  12.json  120.json  121.json  122.json  123.json  124.json  125.json  126.json  127.json  128.json  129.json  13.json  130.json  131.json  132.json  133.json  134.json  (+260 more)
deploy/whitelists/: cryptids_part1.json
docs/contracts/: platform.md
docs/services/airdrop/: readme.md
docs/services/cryptids/: readme.md
docs/services/legendao/: readme.md
scripts/: NFT_interact.js  deploy_LGND.js  deploy_NFT.js  deploy_minting.js  deploy_platform.js  interact.js  interact_NFT.js  interact_athur.js  platform_interact.js  staking_interact.js
services/airdrop/: package-lock.json  package.json
services/airdrop/CheckStatus/: function.json  index.ts
services/airdrop/CreationForm/: CreationFormModel.ts  function.json  index.ts
services/airdrop/ModifyAirdropData/: function.json  index.ts
services/airdrop/MonitorSuccess/: function.json  index.ts
services/airdrop/SendDistributeTx/: function.json  index.ts
services/airdrop/SubmitClaim/: function.json  index.ts
services/airdrop/TokenData/: function.json  index.ts
services/airdrop/shared/: consts.ts  permit.ts
services/cryptids/: package.json  tsconfig.json
services/cryptids/AttributeStatistics/: attributes.json  function.json  index.ts
services/cryptids/IpfsToImage/: function.json  index.ts
services/cryptids/IsWhitelisted/: function.json  index.ts
services/cryptids/TokenStatistics/: attributes.json  function.json  index.ts
services/cryptids/models/: Whitelist.ts
test/: airdrop_tests.js  ci_tests_minting.js  cli.js  platform_tests.js  platform_utils.js  rework_minting.js  rework_staking.js  sample-test.js  staking_multipliers_tests.js  staking_utils.js  stress_tests.js  test_quest.js  test_signature.js  test_vesting.js  utils.js
(+29 files in other folders)
