[package]
name = "airdrop"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# debug-print = ["cosmwasm-std/debug-print"]

[dependencies]
cosmwasm-std = { package = "secret-cosmwasm-std", version = "0.10.1" }
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "0.10" }
secret-toolkit = { version = "0.3", default-features=false, features = ["permit", "viewing-key", "storage", "snip20"] }

schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = { version = "0.6.3" }

[dev-dependencies]
cosmwasm-schema = { package = "cosmwasm-schema", version = "0.10" }
