[package]
name = "snip721-lockable"
version = "0.1.0"
authors = ["bill wincer"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
use_as_lib = []

[dependencies]
cosmwasm-std = { package = "secret-cosmwasm-std", version = "0.10" }
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "0.10" }
secret-toolkit = { version = "0.3", features = ["permit", "viewing-key", "storage", "snip20"], default-features=false }

serde-json-wasm = "0.2.1"
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = { version = "0.6.3" }
bincode2 = "2.0.1"
subtle = { version = "2.2.3", default-features = false }
base64 = "0.11.0"
hex = "0.4.2"
primitive-types = { version = "0.9.0", default-features = false }
rand_chacha = { version = "0.2.2", default-features = false }
rand_core = { version =  "0.5.1", default-features = false }
sha2 = { version = "0.9.1", default-features = false }

[dev-dependencies]
cosmwasm-schema = { package = "cosmwasm-schema", version = "0.10" }
