[package]
name = "staking"
version = "0.1.0"
authors = ["SCRT Labs <info@scrtlabs.com>"]
edition = "2018"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
debug-print = ["cosmwasm-std/debug-print"]

[dependencies]
secret-toolkit = { version = "0.3.0", features = ["permit", "viewing-key"], default-features=false }
secret-toolkit-incubator = { version = "0.3.0", features = ["cashmap"], default-features=false }
cosmwasm-std = { version = "0.10", package = "secret-cosmwasm-std" }
cosmwasm-storage = { version = "0.10", package = "secret-cosmwasm-storage" }
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = { version = "0.6.3" }
platform = { path = "../platform" }
primitive-types = { version = "0.9.0", default-features = false }

[dev-dependencies]
rand = "0.7.3"
cosmwasm-schema = { package = "cosmwasm-schema", version = "0.10" }
